added the traverse strategy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,6 @@ add_executable (${ProjName}
             include/SamplingSim.h )
 
 target_link_libraries (${ProjName} ${Samp_LIBRARIES})
+
+add_executable (stats src/stats.cpp)
+target_link_libraries (stats ${Samp_LIBRARIES})
